--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Khula:wght@300;400&family=Roboto:wght@400;500;600&family=Raleway:wght@400;500;600&display=swap"
+    rel="stylesheet">
+  <title>TROUVE TON BOLIDE</title>
 </head>
 
 <body>
